compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_strings2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let <<x:utf8>> = <<1>> x"

---

error: BitString Segment Error
  ┌─ /src/one/two.gleam:1:7
  │
1 │ let <<x:utf8>> = <<1>> x
  │       ^^^^^^ this cannot be a variable

Hint: in patterns utf8, utf16, and utf32  must be an exact string.
See: https://gleam.run/book/tour/bit-strings.html

